Necessary split of main.h to validation.cpp/net_processing.cpp Dynode classes: Remove repeated/un-needed code and data net: fix remaining net assertions Net: Massive speedup. Net locks overhaul

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -127,7 +127,6 @@ DYNAMIC_CORE_H = \
   keepass.h \
   keystore.h \
   limitedmap.h \
-  main.h \
   memusage.h \
   merkleblock.h \
   messagesigner.h \
@@ -135,6 +134,7 @@ DYNAMIC_CORE_H = \
   net.h \
   netbase.h \
   netfulfilledman.h \
+  net_processing.h \
   noui.h \
   ntp.h \
   policy/fees.h \
@@ -171,6 +171,7 @@ DYNAMIC_CORE_H = \
   support/cleanse.h \
   support/lockedpool.h \
   sync.h \
+  threadinterrupt.h \
   threadsafety.h \
   timedata.h \
   tinyformat.h \
@@ -184,6 +185,7 @@ DYNAMIC_CORE_H = \
   utilmoneystr.h \
   utilstrencodings.h \
   utiltime.h \
+  validation.h \
   validationinterface.h \
   version.h \
   versionbits.h \
@@ -226,12 +228,12 @@ libdynamic_server_a_SOURCES = \
   httprpc.cpp \
   httpserver.cpp \
   init.cpp \
-  main.cpp \
   merkleblock.cpp \
   messagesigner.cpp \
   miner.cpp \
   net.cpp \
   netfulfilledman.cpp \
+  net_processing.cpp \
   noui.cpp \
   ntp.cpp \
   policy/fees.cpp \
@@ -255,6 +257,7 @@ libdynamic_server_a_SOURCES = \
   txdb.cpp \
   txmempool.cpp \
   ui_interface.cpp \
+  validation.cpp \
   validationinterface.cpp \
   versionbits.cpp \
   $(DYNAMIC_CORE_H)
@@ -377,6 +380,7 @@ libdynamic_util_a_SOURCES = \
   support/cleanse.cpp \
   support/lockedpool.cpp \
   sync.cpp \
+  threadinterrupt.cpp \
   uint256.cpp \
   util.cpp \
   utilmoneystr.cpp \
