Fix losing keys on PrivateSend * reserve colateral keey only if needed
reserve colateral keey only if needed -> fix losing one key on every
subsequent CreateDonominate

* Adding KeyHolder and KeyHolderStorage

Adding KeyHolder and KeyHolderStorage to store keys used in PrivateSend
until status of mixing is known.

* Removing ClearOn... methods. Instead of calling directly KeepAll/ReplaceAll.

* remove usage of shared_ptr

* use unique_ptr

* follow naming convention

* use CKeyHolderStorage in CreateDenominated too

* adjust log messages

* return keys on POOL_STATE_ERROR, keep keys on POOL_STATE_SUCCESS

* Disable copy/assign and allow move

* Use keyHolderStorageDenom for collateral output in CreateDenominated

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -146,7 +146,8 @@ DYNAMIC_CORE_H = \
   primitives/transaction.h \
   privatesend-client.h \
   privatesend.h \
-  privatesend-server.h \    
+  privatesend-server.h \
+  privatesend-util.h \
   psnotificationinterface.h \
   protocol.h \
   pubkey.h \
@@ -289,6 +290,7 @@ libdynamic_wallet_a_SOURCES = \
   keepass.cpp \
   policy/rbf.cpp \
   privatesend-client.cpp \
+  privatesend-util.cpp \
   psnotificationinterface.cpp \
   wallet/crypter.cpp \
   wallet/db.cpp \
