--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -421,6 +421,7 @@ dynamicd_LDADD = \
   $(LIBDYNAMIC_UTIL) \
   $(LIBDYNAMIC_CRYPTO) \
   $(LIBLEVELDB) \
+  $(LIBLEVELDB_SSE42) \
   $(LIBMEMENV) \
   $(LIBSECP256K1)
 
