--- a/src/Makefile.bench.include
+++ b/src/Makefile.bench.include
@@ -19,6 +19,7 @@ bench_bench_dynamic_LDADD = \
   $(LIBDYNAMIC_UTIL) \
   $(LIBDYNAMIC_CRYPTO) \
   $(LIBLEVELDB) \
+  $(LIBLEVELDB_SSE42) \
   $(LIBMEMENV) \
   $(LIBSECP256K1)
 
