--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -417,6 +417,7 @@ dynamicd_LDADD = \
   $(LIBDYNAMIC_UTIL) \
   $(LIBDYNAMIC_CRYPTO) \
   $(LIBLEVELDB) \
+  $(LIBLEVELDB_SSE42) \    
   $(LIBMEMENV) \
   $(LIBSECP256K1)
 
