--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,21 @@ script:
 deploy:
   provider: releases
   file: "dynamic-qt"
+  skip_cleanup: false
+  on:
+    tags: true
+
+install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y build-essential libtool autotools-dev autoconf pkg-config libssl-dev libboost-all-dev libqt5gui5 libqt5core5a libqt5dbus5 qttools5-dev qttools5-dev-tools libprotobuf-dev protobuf-compiler libcrypto++-dev libevent-dev
+  - sudo add-apt-repository -y ppa:silknetwork/silknetwork
+  - sudo apt-get update -y && sudo apt-get install -y libdb4.8-dev libdb4.8++-dev
+script:
+  - ./autogen.sh && ./configure --with-gui=qt5 --disable-wallet && make
+
+deploy:
+  provider: releases
+  file: "dynamic-qt"
   skip_cleanup: true
   on:
     tags: true
