Move RPC dispatch table registration to wallet/rpcwallet

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -189,6 +189,7 @@ DYNAMIC_CORE_H = \
   versionbits.h \
   wallet/crypter.h \
   wallet/db.h \
+  wallet/rpcwallet.h \
   wallet/wallet.h \
   wallet/wallet_ismine.h \
   wallet/walletdb.h \
