Fix dynamic-config.h regeneration

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -516,12 +516,18 @@ DISTCLEANFILES = obj/build.h
 
 EXTRA_DIST = leveldb
 
+config/dynamic-config.h: config/stamp-h1
+  @$(MAKE) -C $(top_builddir) $(subdir)/$(@)
+config/stamp-h1: $(top_srcdir)/$(subdir)/config/dynamic-config.h.in $(top_builddir)/config.status
+  $(AM_V_at)$(MAKE) -C $(top_builddir) $(subdir)/$(@)
+$(top_srcdir)/$(subdir)/config/dynamic-config.h.in:  $(am__configure_deps)
+  $(AM_V_at)$(MAKE) -C $(top_srcdir) $(subdir)/config/dynamic-config.h.in
+
 clean-local:
 	-$(MAKE) -C leveldb clean
 	-$(MAKE) -C secp256k1 clean
 	-$(MAKE) -C univalue clean
 	-rm -f leveldb/*/*.gcda leveldb/*/*.gcno leveldb/helpers/memenv/*.gcda leveldb/helpers/memenv/*.gcno
-	-rm -f config/dynamic-config.* config/stamp-h1
 
 .rc.o:
 	@test -f $(WINDRES)
