--- a/configure.ac
+++ b/configure.ac
@@ -189,6 +189,12 @@ AC_ARG_ENABLE([avx2],
   [have_avx2=${enableval}],
   [have_avx2=no])
 
+AC_ARG_ENABLE([avx512f],
+  [AC_HELP_STRING([--enable-avx512f],
+  [enable AVX512F optimizations (defaults is no)])],
+  [have_avx512f=${enableval}],
+  [have_avx512f=no])
+
 AC_ARG_WITH([protoc-bindir],[AS_HELP_STRING([--with-protoc-bindir=BIN_DIR],[specify protoc bin path])], [protoc_bin_path=$withval], [])
 
 # Enable debug
@@ -575,6 +581,10 @@ fi
 
 if test "$have_avx2" = "yes"; then
     AX_CHECK_COMPILE_FLAG([-mavx2],[CFLAGS="$CFLAGS -mavx2" && CXXFLAGS="$CXXFLAGS -mavx2" && CPPFLAGS="$CPPFLAGS -mavx2"])
+fi
+
+if test "$have_avx512f" = "yes"; then
+    AX_CHECK_COMPILE_FLAG([-mavx512f],[CFLAGS="$CFLAGS -mavx512f" && CPPFLAGS="$CPPFLAGS -mavx512f"])
 fi
 
 AX_CHECK_COMPILE_FLAG([-msse2],[CFLAGS="$CFLAGS -msse2"])
