--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -88,6 +88,8 @@ DYNAMIC_TESTS =\
   test/test_dynamic.cpp \
   test/test_dynamic.h \
   test/test_random.h \
+  test/testutil.cpp \
+  test/testutil.h \
   test/timedata_tests.cpp \
   test/transaction_tests.cpp \
   test/txvalidationcache_tests.cpp \
