rpc: Register calls where they are defined

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -153,6 +153,7 @@ DYNAMIC_CORE_H = \
   reverselock.h \
   rpcclient.h \
   rpcprotocol.h \
+  rpcregister.h \
   rpcserver.h \
   scheduler.h \
   script/interpreter.h \
