--- a/src/Makefile.bench.include
+++ b/src/Makefile.bench.include
@@ -8,6 +8,7 @@ bench_bench_dynamic_SOURCES = \
   bench/bench.cpp \
   bench/bench.h \
   bench/Examples.cpp \
+  bench/rollingbloom.cpp \
   bench/lockedpool.cpp
 
 bench_bench_dynamic_CPPFLAGS = $(AM_CPPFLAGS) $(DYNAMIC_INCLUDES) $(EVENT_CLFAGS) $(EVENT_PTHREADS_CFLAGS) -I$(builddir)/bench/
